--- a/index.html
+++ b/index.html
@@ -12,10 +12,38 @@
     </head>
 
     <body>
-        <div class=".grid-container">
+        <div class="grid-container">
             <header>
                 <h1>ACC Scratch</h1>
             </header>
+
+            <div class="beginner">
+                <h2>
+                    Beginner
+                </h2>
+            </div>
+
+            <div class="intermediate">
+                <h2>
+                    Intermediate
+                </h2>
+            </div>
+
+            <div class="advanced">
+                <h2>
+                    Advanced
+                </h2>
+            </div>
+
+            <footer>
+                <hr>
+                <a href="http://validator.w3.org/check?uri=https://jakob-ayers.github.io/website/GDW/acc-scratch">
+                    <strong> HTML </strong> Valid! 
+                </a>
+                    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://jakob-ayers.github.io/acc-scratch">
+                    <strong> CSS </strong> Valid! 
+                </a>
+            </footer>
         </div>
     </body>
 </html>
