added more to beginner page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>
@@ -19,19 +19,19 @@
 
             <div class="beginner">
                 <h2>
-                    Beginner
+                    <a href="lessons/beginner.html">Beginner</a>
                 </h2>
             </div>
 
             <div class="intermediate">
                 <h2>
-                    Intermediate
+                    <a href="lessons/intermediate.html">Intermediate</a>
                 </h2>
             </div>
 
             <div class="advanced">
                 <h2>
-                    Advanced
+                    <a href="lessons/advanced.html">Advanced</a>
                 </h2>
             </div>
 
