added basic page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <h1>ACC Scratch</h1>
             </header>
 
+            <nav>
+                <a href="https://scratch.mit.edu/">Scratch Website</a>
+                 | 
+                <a href="https://careercenter.apsva.us/arlington-tech/">Arlington Tech</a>
+            </nav>
+
+<!--Content Starts-->
             <div class="beginner">
                 <h2>
                     <a href="lessons/beginner.html">Beginner</a>
@@ -34,6 +41,7 @@
                     <a href="lessons/advanced.html">Advanced</a>
                 </h2>
             </div>
+<!--Content Ends-->
 
             <footer>
                 <hr>
