--- a/lessons/beginner.html
+++ b/lessons/beginner.html
@@ -15,21 +15,16 @@
             </header>
 
             <nav>
-                <ul>
-                    <li>
-                        <a href="https://scratch.mit.edu/">Scratch Website</a>
-                    </li>
-                    <li>
-                        <a href="https://careercenter.apsva.us/arlington-tech/">Arlington Tech</a>
-                    </li>
-                </ul>
+                <a href="https://scratch.mit.edu/">Scratch Website</a>
+                 | 
+                <a href="https://careercenter.apsva.us/arlington-tech/">Arlington Tech</a>
             </nav>
             
             <main>
 
             </main>
             <div class="back">
-
+                <a href="../index.html">Back</a>
             </div>
             <footer>
                 <hr>
