--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 
     <body>
         <div class="grid-container">
+
+            <div class="imega">
+                <img src="media/scratch-cat.png" alt="The scratch cat">
+            </div>
             <header>
                 <h1>ACC Scratch</h1>
             </header>
+
+            <div class="imega2">
+                <img src="media/acc-logo.png" alt="Arlington Tech logo">
+            </div>
 
             <nav>
                 <a href="https://scratch.mit.edu/">Scratch Website</a>
