--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <footer>
                 <hr>
-                <a href="http://validator.w3.org/check?uri=https://jakob-ayers.github.io/website/GDW/acc-scratch">
+                <a href="http://validator.w3.org/check?uri=https://jakob-ayers.github.io/website/acc-scratch">
                     <strong> HTML</strong> Valid! 
                 </a>
                     <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://jakob-ayers.github.io/acc-scratch">
