fixed validation links

--- a/lessons/testing-page.html
+++ b/lessons/testing-page.html
@@ -11,7 +11,6 @@
         <div class="grid-container">
             <header>
                 <h1>ACC Scratch</h1>
-                <h2>test</h2>
             </header>
 
             <nav>
@@ -21,7 +20,9 @@
             </nav>
             
             <main>
-
+                <h2>test</h2>
+                <p class="floatleft"> Loremoricitudin. In ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leo. </p>
+                <img src="https://i.imgur.com/Y6hnQby.jpg" alt="a squirrel on a railing" width="200vw" class="floatright">
             </main>
             <div class="back">
                 <a href="../index.html">Back</a>
