changed name to "acc scratchathon"

--- a/lessons/beginner.html
+++ b/lessons/beginner.html
@@ -10,7 +10,7 @@
     <body>
         <div class="grid-container">
             <header>
-                <h1>ACC Scratch</h1>
+                <h1>ACC Scratchathon</h1>
                 <h2>Beginner</h2>
             </header>
 
