--- a/lessons/testing-page.html
+++ b/lessons/testing-page.html
@@ -10,7 +10,7 @@
     <body>
         <div class="grid-container">
             <header>
-                <h1>ACC Scratch</h1>
+                <h1>ACC Scratchathon</h1>
             </header>
 
             <nav>
@@ -22,7 +22,7 @@
             <main>
                 <h2>test</h2>
                 <p class="floatleft"> Loremoricitudin. In ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leoIn ut laoreet nisl, eu pretium leo. </p>
-                <img src="https://i.imgur.com/Y6hnQby.jpg" alt="a squirrel on a railing" width="200vw" class="floatright">
+                <img src="https://i.imgur.com/Y6hnQby.jpg" alt="a squirrel on a railing" width="200vw" class="floatright imega">
             </main>
             <div class="back">
                 <a href="../index.html">Back</a>
