--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            ACC Scratch
+            ACC Scratchathon
         </title>
         <style>
             @import url(style.css);
@@ -18,7 +18,7 @@
                 <img src="media/scratch-cat.png" alt="The scratch cat">
             </div>
             <header>
-                <h1>ACC Scratch</h1>
+                <h1>ACC Scratchathon</h1>
             </header>
 
             <div class="imega2">
@@ -26,7 +26,7 @@
             </div>
 
             <nav>
-                <a href="https://scratch.mit.edu/">Scratch</a>
+                <a href="https://scratch.mit.edu/">Scratche</a>
                  | 
                 <a href="https://careercenter.apsva.us/arlington-tech/">Arlington Tech</a>
             </nav>
