changed "scratche" to scratch

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <nav>
-                <a href="https://scratch.mit.edu/">Scratche</a>
+                <a href="https://scratch.mit.edu/">Scratch</a>
                  | 
                 <a href="https://careercenter.apsva.us/arlington-tech/">Arlington Tech</a>
             </nav>
