--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 <a href="https://scratch.mit.edu/">Scratch</a>
                  | 
                 <a href="https://careercenter.apsva.us/arlington-tech/">Arlington Tech</a>
+                 | 
+                <a href="programs.html">List of Programs</a>
             </nav>
 
 <!--Content Starts-->
