removed individual font-size and added a single font-size to body

--- a/programs.html
+++ b/programs.html
@@ -16,6 +16,13 @@
                     Programs
                 </h1>
             </header>
+
+            <nav>
+                <a href="index.html">
+                    Back
+                </a>
+            </nav>
+            
             <div class="links">
                 <h2>All of the programs, in alphabetical order</h2>
                 
