added 2nd back link to lesson pages

--- a/lessons/beginner.html
+++ b/lessons/beginner.html
@@ -11,16 +11,18 @@
         <div class="grid-container">
             <header>
                 <h1>ACC Scratchathon</h1>
-                <h2>Beginner</h2>
             </header>
-
+            
             <nav>
                 <a href="https://scratch.mit.edu/">Scratch Website</a>
                  | 
                 <a href="https://careercenter.apsva.us/arlington-tech/">Arlington Tech</a>
+                 | 
+                <a href="../index.html">Back</a>
             </nav>
             
             <main>
+                <h2>Beginner</h2>
 
             </main>
             <div class="back">
