--- a/lessons/intermediate.html
+++ b/lessons/intermediate.html
@@ -17,6 +17,8 @@
                 <a href="https://scratch.mit.edu/">Scratch Website</a>
                  | 
                 <a href="https://careercenter.apsva.us/arlington-tech/">Arlington Tech</a>
+                 | 
+                <a href="../index.html">Back</a>
             </nav>
             
             <main>
