made css only rely on 1 stylesheet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         </title>
         <style>
             @import url(style.css);
+            @import url(main-style.css);
         </style>
     </head>
 
@@ -52,6 +53,7 @@
                 </h2>
             </div>
 <!--Content Ends-->
+</div>
 
             <footer>
                 <hr>
@@ -62,6 +64,5 @@
                     <strong> CSS</strong> Valid! 
                 </a>
             </footer>
-        </div>
     </body>
 </html>
