--- a/lessons/advanced.html
+++ b/lessons/advanced.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Beginner</title>
-        <style>@import url(lesson.css);</style>
+        <style>@import url(../main-style.css);</style>
     </head>
 
     <body>
