--- a/programs.html
+++ b/programs.html
@@ -6,7 +6,7 @@
         </title>
         <meta charset="utf-8">
         <style>
-            @import url(programs.css);
+            @import url(main-style.css);
         </style>
     </head>
     <body>
