added projects to the pages

--- a/lessons/beginner.html
+++ b/lessons/beginner.html
@@ -24,6 +24,17 @@
             <main>
                 <h2>Beginner</h2>
 
+                <ul>
+                    <li>
+                        <a href="https://scratch.mit.edu/projects/610011177/">Hello World!</a>
+                    </li>
+                    <li>
+                        <a href="https://scratch.mit.edu/projects/587652993/">Name</a>
+                    </li>
+                    <li>
+                        <a href="https://scratch.mit.edu/projects/591570487/">Button and Tennis Ball</a>
+                    </li>
+                </ul>
             </main>
             <div class="back">
                 <a href="../index.html">Back</a>
