--- a/lessons/intermediate.html
+++ b/lessons/intermediate.html
@@ -24,6 +24,20 @@
             <main>
                 <h2>Intermediate</h2>
 
+                <ul>
+                    <li>
+                        <a href="https://scratch.mit.edu/projects/587705434/">ZOOOM!</a>
+                        </li>
+                    <li>
+                        <a href="https://scratch.mit.edu/projects/587657016/">The Cat and the Dog</a>
+                    </li>
+                    <li>
+                        <a href="https://scratch.mit.edu/projects/587704606/">Titanic (spoilers)</a>
+                    </li>
+                    <li>
+                        <a href="https://scratch.mit.edu/projects/599551006/">Pong (simplified)</a>
+                    </li>
+                </ul>
             </main>
             <div class="back">
                 <a href="../index.html">Back</a>
